force-app/main/default/objects/EYI_Applied_Project_Charge__c/EYI_Applied_Project_Charge__c.object-meta.xml
<CustomObject>
    <description>Junction object of Quote and Project Charge</description>
    <label>Applied Project Charge</label>
    <nameField>
        <label>Applied Project Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applied Project Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>