force-app/main/default/objects/EYI_Applied_Project_Charge__c/fields/EYI_Calculated_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Calculated_Amount__c</fullName>
    <formula>CASE(
EYI_Project_Charges__r.EYI_Charge_Bucket__c,
&apos;Maintenance Charges&apos;, IF(NOT(ISNULL(EYI_Project_Charges__r.EYI_Term__c))  , EYI_Project_Charges__r.EYI_Rate__c * EYI_Quote__r.EYI_Inventory__r.EYI_Saleable_Area__c * EYI_Project_Charges__r.EYI_Term__c, EYI_Project_Charges__r.EYI_Rate__c * EYI_Quote__r.EYI_Inventory__r.EYI_Saleable_Area__c),
&apos;Other Charges&apos;, CASE(EYI_Project_Charges__r.EYI_Global_Charges__r.Name ,
&apos;Basic&apos;,  0 ,
CASE( EYI_Project_Charges__r.EYI_Charge_Calculated_As__c,
&apos;Lumpsum at Project Level&apos;, EYI_Project_Charges__r.EYI_Amount__c,
&apos;Rate List at Unit Level&apos; , EYI_Project_Charges__r.EYI_Rate__c * EYI_Quote__r.EYI_Inventory__r.EYI_Saleable_Area__c,

0))


,0)</formula>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>