force-app/main/default/objects/EYI_Applied_Project_Charge__c/fields/EYI_Grand_Total_Value_in_Words__c.field-meta.xml
<CustomField>
    <fullName>EYI_Grand_Total_Value_in_Words__c</fullName>
    <label>Grand Total Value in Words</label>
    <length>255</length>
    <type>Text</type>
</CustomField>