force-app/main/default/objects/EYI_Applied_Project_Charge__c/fields/EYI_GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_GST_Amount__c</fullName>
    <formula>CASE(
 EYI_Project_Charges__r.EYI_Global_Charges__r.Name ,
&apos;Tax&apos;, EYI_Charged_Amount__c, 
&apos;STAMP DUTY NON RECOVERABLE&apos;,  EYI_Quote__r.Stamp_Duty__c ,
&apos;Registration Charges&apos;, IF( EYI_Quote__r.EYI_Agreement_Value__c &lt; 3000000, (EYI_Project_Charges__r.EYI_Charge_Percentage__c * EYI_Quote__r.EYI_Agreement_Value__c), 30000) ,
CASE(
EYI_Project_Charges__r.EYI_Charge_Calculated_As__c ,
&apos;Percentage of Agreement Value&apos;, (EYI_Project_Charges__r.EYI_Charge_Percentage__c * EYI_Quote__r.EYI_Agreement_Value__c),
EYI_Calculated_Amount__c * VALUE(SUBSTITUTE(TEXT(EYI_Project_Charges__r.EYI_GST_Percentage__c), &quot;GST-&quot;, &quot;&quot;)) / 100))</formula>
    <label>GST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>