force-app/main/default/objects/EYI_Applied_Project_Charge__c/fields/EYI_Project_Charges__c.field-meta.xml
<CustomField>
    <fullName>EYI_Project_Charges__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Charges</label>
    <referenceTo>Project_Charges__c</referenceTo>
    <relationshipLabel>Applied Project Charges</relationshipLabel>
    <relationshipName>Applied_Project_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>