force-app/main/default/objects/EYI_Applied_Project_Charge__c/fields/EYI_Quote__c.field-meta.xml
<CustomField>
    <fullName>EYI_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Applied Project Charges</relationshipLabel>
    <relationshipName>Applied_Project_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>