force-app/main/default/objects/EYI_Applied_Project_Charge__c/fields/EYI_SAP_Final_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Final_Amount__c</fullName>
    <label>SAP Final Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>