force-app/main/default/objects/EYI_Applied_Project_Charge__c/fields/EYI_Tax__c.field-meta.xml
<CustomField>
    <fullName>EYI_Tax__c</fullName>
    <formula>CASE( Name ,
 &apos;Central GST&apos;,((  EYI_Charged_Amount__c * 100)/ EYI_Quote__r.EYI_Agreement_Value__c )/ 100, 
&apos;State GST&apos;,((  EYI_Charged_Amount__c * 100)/ EYI_Quote__r.EYI_Agreement_Value__c )/ 100,
&apos;Stamp Duty&apos;, 
IF(
     EYI_Quote__r.EYI_Agreement_Value__c  &gt; 0,
    ( EYI_Quote__r.Stamp_Duty__c  / EYI_Quote__r.EYI_Agreement_Value__c),
    0
)
,
CASE( EYI_Project_Charges__r.EYI_Charge_Calculated_As__c ,
 &apos;Percentage of Agreement Value&apos;,  IF( EYI_Project_Charges__r.EYI_Global_Charges__r.Name != &apos;Registration Charges&apos;,EYI_Project_Charges__r.EYI_Charge_Percentage__c, VALUE(&apos;&apos;)),
 VALUE(SUBSTITUTE(TEXT(EYI_Project_Charges__r.EYI_GST_Percentage__c), &quot;GST-&quot;, &quot;&quot;))/100) )</formula>
    <label>Tax %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>