force-app/main/default/objects/EYI_Applied_Project_Charge__c/fields/Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total__c</fullName>
    <formula>CASE( Name , 
&apos;Central GST&apos;, EYI_Charged_Amount__c ,
&apos;State GST&apos;, EYI_Charged_Amount__c,

EYI_Calculated_Amount__c +  EYI_GST_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>