force-app/main/default/objects/EYI_Applied_Project_Charge__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>EYI_Quote__c</columns>
    <columns>EYI_Project_Charges__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>